# ponio

./: .clang-tidy  .cppcheck  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.txt  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  pixi.toml  release-please-config.json
.github/: pull_request_template.md
.github/workflows/: check-pr-title.yml  conan.yml  linux.yml  macos.yml  midnight.yml  multi-os.yml  pages.yml  ponio-ci.yml  release-please.yml  win.yml
analysis/: analysis.py  dp54.py  environment.yml  requirements.txt
database/: ETD2CF3.json  ETD3RK.json  backward_euler.json  butcher_tableaus.json  cox_matthews.json  crancknicolson.json  crancknicolson_2.json  db.py  dirk23.json  dirk23_crouzeix.json  dirk34.json  dirk_qin_zhang.json  esdirk_54a.json  euler.json  explicit_euler_sub4.json  exprk22.json  hochbruck_ostermann.json  imex_ldp.json  imex_ldp1.json  imex_ldp2.json  imex_ldp3.json  imex_lds1.json  imex_lds2.json  implicit_midpoint.json  krogstad.json  lsdirk22qz.json  lsdirk33.json  lsdirk43.json  radau_iia.json  rk54_6m.json  rk54_7m.json  rk54_7s.json  rk56.json  rk56a.json  rk65_8m.json  rk6es.json  rk87_13m.json  rk_118.json  rk_21.json  rk_22_midpoint.json  (+35 more)
environment/: conda-environment-all.yml  conda-environment-analysis.yml  conda-environment-test.yml  conda-environment.yml  requirements.txt
html/: addMethod.js  clipboardSet.js  copyKaTeX.js  filter.js  graph.html  index.html  main.js  style.css  themeSwitcher.js  viewer.html
ponio/: .clang-format  code_generator.py  requirements.txt
ponio/demos/: CMakeLists.txt  README.md  arenstorf.py  belousov_zhabotinsky_pirock.cpp  belousov_zhabotinsky_pirock.py  brownian.py  brusselator.cpp  brusselator.py  brusselator_dirk.cpp  combustion2d.cpp  combustion2d.py  combustion_2d_pirock.cpp  curtiss_hirschfelder.py  curtiss_hirschfelder_exprk.cpp  curtiss_hirschfelder_exprk.py  exp.cpp  heat.cpp  heat.py  heat_rock.py  heat_samurai.cpp  lorenz.py  lotka_volterra.cpp  lotka_volterra.py  nagumo.cpp  nagumo_pirock.cpp  pendulum.cpp
ponio/doc/: Doxyfile  Makefile  environment.yml
ponio/doc/scripts/: pre_install.sh
ponio/doc/source/: bibliography.bib  conf.py  index.rst
ponio/doc/source/api/: algorithm.rst  api.rst  detail.rst  method.rst  observer.rst  problem.rst  solver.rst  splitting.rst  time_span.rst
ponio/doc/source/compare/: README.md  README.rst  TODO.md  figures.py
ponio/doc/source/demos/: lorenz.rst
ponio/doc/source/gallery/: gallery.rst
ponio/doc/source/user/: curtiss_hirschfelder.rst  how_to.rst  install.rst  lorenz.rst  lotka_volterra.rst  time_integrators.rst  time_iterator.uml  user.rst
ponio/examples/: CMakeLists.txt  README.md  arenstorf.cpp  arenstorf.py  belousov_zhabotinsky_pirock.cpp  belousov_zhabotinsky_pirock.py  brownian.cpp  brownian.py  brusselator.cpp  brusselator.py  brusselator_advection_2d.cpp  brusselator_advection_2d.py  brusselator_dirk.cpp  brusselator_dirk.py  bz_2d_pirock.cpp  bz_2d_pirock.py  curtiss_hirschfelder.cpp  curtiss_hirschfelder.py  curtiss_hirschfelder_exprk.cpp  curtiss_hirschfelder_exprk.py  exp.cpp  exp.py  exp_splitting.cpp  exp_splitting.py  heat.cpp  heat.py  heat_eigen.cpp  heat_eigen.py  heat_rock.cpp  heat_rock.py  heat_samurai.cpp  heat_samurai.py  lorenz.cpp  lorenz.py  lorenz_all.cpp  lorenz_all.py  lorenz_tuto.cpp  lorenz_tuto.py  lotka_volterra.cpp  lotka_volterra.py  (+6 more)
ponio/include/ponio/: butcher_tableau.hpp  detail.hpp  eigen_linear_algebra.hpp  iteration_info.hpp  linear_algebra.hpp  method.hpp  observer.hpp  problem.hpp  runge_kutta.hpp  samurai_linear_algebra.hpp  solver.hpp  splitting.hpp  stage.hpp  time_span.hpp  user_defined_method.hpp
ponio/include/ponio/expressions/: petsc.hpp  state.hpp
ponio/include/ponio/runge_kutta/: ark.hpp  dirk.hpp  erk.hpp  exprk.hpp  lrk.hpp  pirock.hpp  rkc.hpp  rkl.hpp  rock.hpp  (+1 more)
ponio/notebooks/: README.md  arenstorf_adaptivetimestep.ipynb  belousov_zhabotinsky.ipynb  curtiss_hirschfelder.ipynb  lotka_volterra_expRK.ipynb  lotka_volterra_lawson.ipynb  lotka_volterra_rungekutta.ipynb  lotka_volterra_splitting.ipynb
ponio/template/: tpl_butcher_methods.hxx  tpl_doc_algorithms.rst  tpl_doc_dirk.rst  tpl_doc_dp.rst  tpl_doc_erk.rst  tpl_doc_exprk.rst  tpl_doc_lrk.rst
ponio/test/: CMakeLists.txt  Makefile  compute_order.hpp  detail.hxx  expressions.hxx  iteration_info.hxx  main.cpp  observer.hxx  test_order.hxx  test_order_split.hxx  test_samurai.hxx
solver/: .clang-format  Makefile  code_generator.py  environment.yml  requirements.txt  tpl_butcher_methods.hxx
solver/demos/: CMakeLists.txt  Makefile  arenstorf.cpp  arenstorf.py  brownian.cpp  brownian.py  brusselator.cpp  brusselator.py  brusselator_dirk.cpp  brusselator_dirk.py  curtiss_hirschfelder.cpp  curtiss_hirschfelder.py  curtiss_hirschfelder_exprk.cpp  curtiss_hirschfelder_exprk.py  exp.cpp  exp.py  heat.cpp  heat.py  heat_rock.cpp  heat_rock.py  heat_samurai.cpp  lokta_voltera.py  lorenz.cpp  lorenz.py  lorenz_tuto.cpp  lorenz_tuto.py  lotka_volterra.cpp  lotka_volterra.py  main.cpp  nagumo.cpp  pendulum.cpp  pendulum.py
solver/doc/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Makefile  environment.yml
solver/doc/scripts/: pre_install.sh
solver/doc/source/: conf.py  index.rst
solver/include/solver/: butcher_methods.hpp  butcher_tableau.hpp  detail.hpp  eigen_linear_algebra.hpp  generic_butcher_rk.hpp  linear_algebra.hpp  method.hpp  observer.hpp  ponio_config.hpp  problem.hpp  runge_kutta.hpp  solver.hpp  splitting.hpp  stage.hpp  time_span.hpp
solver/notebooks/: README.md  arenstorf_adaptivetimestep.ipynb  belousov_zhabotinsky.ipynb  curtiss_hirschfelder.ipynb  lotka_volterra_expRK.ipynb  lotka_volterra_lawson.ipynb  lotka_volterra_rungekutta.ipynb  lotka_volterra_splitting.ipynb  lotka_volterra_tuto.ipynb  three_body_choregraphy.ipynb
solver/template/: tpl_butcher_methods.hxx  tpl_test_order.hxx
solver/test/: CMakeLists.txt  Makefile  compute_order.hpp  detail.hxx  environment.yml  main.cpp  observer.hxx  test_order.hxx  test_order_split.hxx
(+85 files in other folders)
