set(demos arenstorf brownian brusselator brusselator_dirk exp heat heat_rock pendulum lorenz lotka_volterra curtiss_hirschfelder nagumo)
set(demos_eigen brusselator_dirk)
set(demos_cli11 brownian lotka_volterra)

foreach(demo IN LISTS demos)
    message(STATUS "demo=${demo}")
    add_executable(${demo} ${demo}.cpp)
    if(${demo} IN_LIST demos_eigen)
        message(STATUS "EIGEN=${demo}")
        find_package (Eigen3 3.4 REQUIRED NO_MODULE)
        target_link_libraries(${demo} Eigen3::Eigen)
    endif()
    if(${demo} IN_LIST demos_cli11)
        message(STATUS "CLI11=${demo}")
        find_package(CLI11)
        target_link_libraries(${demo} CLI11::CLI11)
    endif()

    target_link_libraries(${demo} ponio)
endforeach()

foreach(demo IN LISTS demos)
    add_custom_target(visu_${demo} python ${CMAKE_SOURCE_DIR}/solver/demos/${demo}.py)
    add_custom_target(${demo}_visu make visu_${demo})
endforeach()
