set(demos arenstorf brownian brusselator brusselator_dirk exp heat heat_rock heat_samurai pendulum lorenz lotka_volterra curtiss_hirschfelder)
set(demos_eigen brusselator_dirk)
set(demos_cli11 brownian lotka_volterra)
set(demos_samurai heat_samurai)

foreach(demo IN LISTS demos)
    message(STATUS "demo=${demo}")
    add_executable(${demo} ${demo}.cpp)
    if(${demo} IN_LIST demos_eigen)
        message(STATUS "-> EIGEN")
        find_package (Eigen3 3.4 REQUIRED NO_MODULE)
        target_link_libraries(${demo} Eigen3::Eigen)
    endif()
    if(${demo} IN_LIST demos_cli11)
        message(STATUS "-> CLI11")
        find_package(CLI11)
        target_link_libraries(${demo} CLI11::CLI11)
    endif()
    if(${demo} IN_LIST demos_samurai)
        message(STATUS "-> SAMURAI")
        find_package(PkgConfig)
        pkg_check_modules(PETSC PETSc)

        if(PETSC_FOUND)
            find_package(MPI)

            target_link_libraries(${demo} ${PETSC_LIBRARIES} ${MPI_LIBRARIES})
        endif()

        find_package(samurai)
        find_package(fmt)
        target_link_libraries(${demo} samurai::samurai fmt::fmt)
    endif()

    target_link_libraries(${demo} ponio)
endforeach()

foreach(demo IN LISTS demos)
    add_custom_target(visu_${demo} python ${CMAKE_SOURCE_DIR}/solver/demos/${demo}.py)
    add_custom_target(${demo}_visu make visu_${demo})
endforeach()
